[package]
name = "aoc2023_day1"
version = "0.2.0"
# 0.2.0 summator implemented
# 0.1.0 one_liner implemented
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = [ "full" ] }
anyhow = "1"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
